# backend

./: '  .env.example  .gitignore  Cargo.toml  README.md  deny.toml  docker-compose.yml  justfile
.github/: dependabot.yml
crates/kitchen/: Cargo.toml
crates/trading_bot/: Cargo.toml
crates/trading_bot/src/: config.rs  main.rs
crates/trading_bot/src/module/evaluation/: router.rs
crates/user/: Cargo.toml
crates/user/migrations/: 20240802213858_user.sql
crates/user/src/: config.rs  error.rs  json.rs  lib.rs  main.rs  model.rs  state.rs  version.rs
crates/user/src/module/: mod.rs
crates/user/src/module/auth/: dto.rs  mod.rs  router.rs
crates/user/src/module/health/: router.rs
crates/user/src/module/user/: dto.rs  mod.rs  model.rs  repository.rs  router.rs
crates/user/src/module/wallet/: dto.rs  mod.rs  model.rs  repository.rs  router.rs
http/: user.http
migrations/: 20240802213858_user.sql
