[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
