[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
