[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }
validator = { workspace = true }
